added header section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Garden</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Lobster&family=Open+Sans:wght@400;700&family=Poppins:wght@500&family=Work+Sans&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/flower-shop.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div>
+            <h1 class="banner-heading">Let's make beautiful flowers <br> a part of your life.</h1> <br>
+            <p>Welcome to our exquisite online flower shop, where elegance and nature unite in perfect harmony. Explore
+                a captivating array of handpicked blooms that paint a vivid tapestry of colors and fragrances</p>
+            <br>
+            <button class="btn-primary">Shop Now</button>
+        </div>
+        <img src="Flower Asset/pngwing 6.png" alt="">
+    </header>
+    <main>
+        <section class="features">
+            <div>
+                <h3>Our Featured Flowers</h3>
+                <p>Your satisfaction is our priority. Join a community of delighted customers who have experienced the magic of our flowers and the exceptional service that accompanies them.</p>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
