added features, service, sign-up, social and subscribe section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- header-start -->
     <header class="header">
         <div>
             <h1 class="banner-heading">Let's make beautiful flowers <br> a part of your life.</h1> <br>
@@ -23,15 +24,104 @@
             <br>
             <button class="btn-primary">Shop Now</button>
         </div>
-        <img src="Flower Asset/pngwing 6.png" alt="">
+        <img class="banner-img" src="Flower Asset/pngwing 6.png" alt="">
     </header>
+    <!-- header-end -->
     <main>
+        <!-- features-start -->
         <section class="features">
-            <div>
-                <h3>Our Featured Flowers</h3>
-                <p>Your satisfaction is our priority. Join a community of delighted customers who have experienced the magic of our flowers and the exceptional service that accompanies them.</p>
+            <div class="features-text">
+                <h2>Our Featured Flowers</h2> <br>
+                <p>Your satisfaction is our priority. <br> Join a community of delighted customers who have experienced
+                    the magic of our <br> flowers and the exceptional service that accompanies them.</p>
+            </div>
+            <div class="featured-flowers">
+                <div class="flower">
+                    <div class="display-flower-1">
+                        <img src="Flower Asset/pngwing 6.png" alt="" height="370px" width="300px">
+                    </div>
+                    <br>
+                    <p><u>Pink Flower Tree</u></p>
+                </div>
+                <div class="flower">
+                    <div class="display-flower-2">
+                        <img src="Flower Asset/pngwing 5.png" alt="" height="370px" width="300px">
+                    </div>
+                    <br>
+                    <p><u>Red Flower Tree</u></p>
+                </div>
+                <div class="flower">
+                    <div class="display-flower-3">
+                        <img src="Flower Asset/pngwing 7.png" alt="" height="370px" width="300px">
+                    </div>
+                    <br>
+                    <p><u>Yellow Flower Tree</u></p>
+                </div>
             </div>
         </section>
+        <!-- features-end -->
+
+        <!-- service-start -->
+        <section class="services">
+            <div class="details">
+                <img src="Flower Asset/Group 57.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="details">
+                <img src="Flower Asset/Group 58.png" alt="">
+                <p>Fresh Flowers. Local Growers.</p>
+            </div>
+            <div class="details">
+                <img src="Flower Asset/Group 59.png" alt="">
+                <p>24/7 Free Support.</p>
+            </div>
+        </section>
+        <!-- service-end -->
+
+        <!-- sing-up-start -->
+        <section class="sing-up">
+            <div>
+                <h2>Hot Deal ! Sale Up To 25% <span id="discount">Off</span></h2>
+                <br>
+                <p>Unlock a blooming 25% off your first purchase by joining our flower family today! Sign up and step
+                    into a world of vibrant petals, delightful fragrances, and exclusive savings. Let's make your first
+                    floral experience with us truly unforgettable. Claim your 25% welcome discount now!</p>
+                <br>
+                <button class="btn-primary">Sign Up</button>
+            </div>
+            <div>
+                <img src="Flower Asset/pngwing 8.png" alt="">
+            </div>
+        </section>
+        <!-- sing-up-end -->
+
+        <!-- Social-site-start -->
+        <section class="social-site">
+            <div class="social-info">
+                <h2>Instagram</h2>
+                <br>
+                <p>Join our floral community and let's share the beauty of nature together.</p>
+                <br>
+            </div>
+            <div class="sample-flower">
+                <img src="Flower Asset/Flower 01.png" alt="" height="310px">
+                <img src="Flower Asset/Rectangle 4.png" alt="" height="310px">
+                <img src="Flower Asset/Rectangle 5.png" alt="" height="310px">
+                <img src="Flower Asset/Rectangle 6.png" alt="" height="310px">
+            </div>
+        </section>
+        <!-- Social-site-end -->
+
+        <!-- Subscribe-start -->
+        <section class="subscribe">
+            <h2>Get The Latest Deals</h2> 
+            <br>
+            <p>$30 coupon for first shopping</p>
+            <br>
+            <input class="email-area" type="email" name="" id="" placeholder="Enter your email here....">
+            <button class="btn-primary">Subscribe</button>
+        </section>
+        <!-- Subscribe-end -->
     </main>
     <footer>
 
