--- a/index.html
+++ b/index.html
@@ -123,8 +123,12 @@
         </section>
         <!-- Subscribe-end -->
     </main>
-    <footer>
-
+    <footer class="footer">
+        <h1><span style="color: #E55473;">Flower</span><span style="color: #FFF;">Shop</span></h1>
+        <br>
+        <p class="footer-text">It is a long established fact that a reader will be distracted by the readable content of <br> a page when looking at its layout.</p>
+        <br>
+        <p class="footer-alert">@2020-2023, FlowerShop.com. All rights reserved.</p>
     </footer>
 </body>
 
