added other services section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles/flower-shop.css">
+    <script src="https://kit.fontawesome.com/838a2fecb0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -77,6 +78,38 @@
             </div>
         </section>
         <!-- service-end -->
+
+        <!-- other-services-start -->
+        <section class="other-facilities">
+            <h1 style="text-align: center;">Other Services</h1>
+            <br>
+            <div class="other-services">
+                <div>
+                    <h4><i class="fa-solid fa-check fa-beat-fade" style="color: #5dca4e;"></i> Bespoke Bouquets</h4>
+                    <br>
+                    <h4><i class="fa-solid fa-check fa-beat-fade" style="color: #5dca4e;"></i> Subscription Packages</h4>
+                    <br>
+                    <h4><i class="fa-solid fa-check fa-beat-fade" style="color: #5dca4e;"></i> Event Elegance</h4>
+                    
+                </div>
+                <div>
+                    <h4><i class="fa-solid fa-check fa-beat-fade" style="color: #5dca4e;"></i> Worldwide Shipping</h4>
+                    <br>
+                    <h4><i class="fa-solid fa-check fa-beat-fade" style="color: #5dca4e;"></i> Corporate Gifting</h4>
+                    <br>
+                    <h4><i class="fa-solid fa-check fa-beat-fade" style="color: #5dca4e;"></i> Special Event Decoration</h4>
+                    
+                </div>
+                <div>
+                    <h4><i class="fa-solid fa-check fa-beat-fade" style="color: #5dca4e;"></i> Virtual Floral Workshops</h4>
+                    <br>
+                    <h4><i class="fa-solid fa-check fa-beat-fade" style="color: #5dca4e;"></i> Online Guidance</h4>
+                    <br>
+                    <h4><i class="fa-solid fa-check fa-beat-fade" style="color: #5dca4e;"></i> Eco-Friendly Initiatives</h4>
+                </div>
+            </div>
+        </section>
+        <!-- other-services-end -->
 
         <!-- sing-up-start -->
         <section class="sing-up">
